Update 'fyvdvc0a8-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:60ffb4248f3db290443b077bb3f118d60d9168ab@sha256:66b87a085006adca8486ef02cab53faf670176f6a0ae3f7f9e07b09535b39172

--- a/components/fyvdvc0a8-python/overlays/development/deployment-patch.yaml
+++ b/components/fyvdvc0a8-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fyvdvc0a8-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:60ffb4248f3db290443b077bb3f118d60d9168ab@sha256:66b87a085006adca8486ef02cab53faf670176f6a0ae3f7f9e07b09535b39172
+          name: container-image
